finish fetch api

--- a/index.html
+++ b/index.html
@@ -21,27 +21,42 @@
           <option value="female">Kobieta</option>
         </select>
         <label class="generator__label" for="count">Liczba osób</label>
-        <input class="generator__count" type="number" name="count" id="count">
+        <input class="generator__count" type="number" name="count" id="count" />
         <button class="generator__btn" type="submit">Pobierz</button>
       </form>
       <div class="people">
         <div class="person">
-          <img class="person__image" src="https://randomuser.me/api/portraits/med/men/75.jpg" alt="avatar">
+          <img
+            class="person__image"
+            src="https://randomuser.me/api/portraits/med/men/75.jpg"
+            alt="avatar"
+          />
           <h2 class="person__name">Mr Brad Gibson</h2>
         </div>
         <div class="person">
-          <img class="person__image" src="https://randomuser.me/api/portraits/med/men/75.jpg" alt="avatar">
+          <img
+            class="person__image"
+            src="https://randomuser.me/api/portraits/med/men/75.jpg"
+            alt="avatar"
+          />
           <h2 class="person__name">Mr Brad Gibson</h2>
         </div>
         <div class="person">
-          <img class="person__image" src="https://randomuser.me/api/portraits/med/men/75.jpg" alt="avatar">
+          <img
+            class="person__image"
+            src="https://randomuser.me/api/portraits/med/men/75.jpg"
+            alt="avatar"
+          />
           <h2 class="person__name">Mr Brad Gibson</h2>
         </div>
         <div class="person">
-          <img class="person__image" src="https://randomuser.me/api/portraits/med/men/75.jpg" alt="avatar">
+          <img
+            class="person__image"
+            src="https://randomuser.me/api/portraits/med/men/75.jpg"
+            alt="avatar"
+          />
           <h2 class="person__name">Mr Brad Gibson</h2>
         </div>
-
       </div>
     </div>
 
